Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87339

wasm: Emoji couldn't show while the text contains Chinese and emoji mix

    XMLWordPrintable

Details

    • WebAssembly
    • 81d9b5ada4 (qt/qtbase/dev) c8b9fcef6c (qt/qtbase/6.4) c8b9fcef6c (qt/tqtc-qtbase/6.4) 81d9b5ada4 (qt/tqtc-qtbase/dev)

    Description

      I have upload a demo to show problem. But I remove NotoSerifCJK-Regular.ttc and NotoColorEmoji.ttf files becourse the size of them is larger than 10M, so you just need to add them to the test project root folder, then run it. You can see some labels with defferent texts. Only Chinese text is OK, and Only emoji is OK, but mix Chinese and emoji is not right. Please check it. If there is any confusion,please tell me as soon as possible. Thank you!

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            aleksandr.reviakin Aleksandr Reviakin
            yi yi huang
            Votes:
            2 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes