wasm: add DejaVu Sans as a fallback font

Add fallback font which supports emoji.
Similar logic of addding additional fallback fonts is used
for some other platforms.

Fixes: QTBUG-87339
Change-Id: Iad9e7071bcc3c5bb1c11c6c745fd86f7d0f7860b
Reviewed-by: Mikołaj Boc <Mikolaj.Boc@qt.io>
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
(cherry picked from commit 81d9b5ada4d6e495a592123cf76ac5fff0718014)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>